Updated hybrid inheritance project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">© Created by <b>Rajendra</b></div>
+    <div class="footer">© Developed by <b>RAJENDRA</b></div>
 
 </div>
 
