--- a/index.html
+++ b/index.html
@@ -18,13 +18,29 @@
 
     <p class="tagline">Secure • Smart • Digital Banking</p>
 
-    <!-- User Details -->
-    <input type="text" id="username" placeholder="Customer Name">
-    <input type="text" id="account" placeholder="Account Number">
+    <!-- NAME INPUT + SUGGESTIONS -->
+    <div class="input-wrapper">
+        <input
+            type="text"
+            id="username"
+            placeholder="Customer Name"
+            autocomplete="off"
+        >
+        <ul id="nameSuggestions" class="suggestions hidden"></ul>
+    </div>
+
+    <!-- ACCOUNT NUMBER -->
+    <input
+        type="text"
+        id="account"
+        placeholder="Account Number (12 digits)"
+        maxlength="12"
+        autocomplete="off"
+    >
 
     <button id="continueBtn" class="start-btn">Continue</button>
 
-    <!-- Bank Options -->
+    <!-- BANK OPTIONS -->
     <div id="bankOptions" class="hidden">
         <input type="number" id="amount" placeholder="Enter Amount">
 
@@ -32,26 +48,28 @@
             <button class="deposit">Deposit</button>
             <button class="withdraw">Withdraw</button>
         </div>
+
+        <button id="logoutBtn" class="start-btn logout hidden">Logout</button>
     </div>
 
-    <!-- Status -->
+    <!-- STATUS -->
     <div id="output" class="output">
         Welcome to <b>Future Bank 🏦</b><br>
         Please enter your details to continue
     </div>
 
-    <!-- Thank You -->
+    <!-- THANK YOU -->
     <div id="thankYou" class="thank-you hidden">
         Thanks for visiting <b>Future Bank 🏦</b> 😊
     </div>
 
-    <!-- History -->
+    <!-- HISTORY -->
     <div id="historyPopup" class="history-popup hidden">
         <h3>Transaction History</h3>
         <ul id="historyList"></ul>
     </div>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <div class="footer">© Developed by <b>RAJENDRA</b></div>
 
 </div>
@@ -59,4 +77,3 @@
 <script src="future_bank.js"></script>
 </body>
 </html>
-
